[package]
name = "nmea"
version = "0.0.9"
authors = [
    "Felix Obenhuber <felix@obenhuber.de>",
    "Evgeniy A. Dushistov <dushistov@mail.ru>",
    "Henrik Böving <hargonix@gmail.com>"
]
description = "Simple NMEA 0183 parser"
license = "Apache-2.0"
keywords = ["NMEA", "gps", "glonass", "coordinate", "position"]
repository = "https://github.com/AeroRust/nmea"
documentation = "https://docs.rs/nmea/"
readme = "README.md"
edition = "2018"

[dependencies.nom]
version = "5"
default-features = false

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.arrayvec]
version = "0.5"
default-features = false

[dependencies.libm]
version = "0.2"

[dev-dependencies]
quickcheck = "0.9"
approx = "0.3"

[features]
alloc = ["chrono/alloc"]
std = ["arrayvec/std", "chrono/std", "nom/std"]
default = ["std", "alloc"]
